crates/air_r_parser/tests/snapshots/error/parenthesized_expression/multiple.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
(
  a
  b
)
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                R_BOGUS@0..11 "(\n  a\n  b\n)" [] [],
            ],
        },
    ],
    eof_token: EOF@11..11 "" [] [],
}
```

## CST

```
0: R_ROOT@0..11
  0: (empty)
  1: R_EXPRESSION_LIST@0..11
    0: R_BOGUS_EXPRESSION@0..11
      0: R_BOGUS@0..11 "(\n  a\n  b\n)" [] []
  2: EOF@11..11 "" [] []

```

## Diagnostics

```
multiple.R parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse due to syntax errors.
  
```
